# Stipple

./: .clang-format  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CImgTest.cpp  CMakeCache.txt  CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  README.md  Stipple.cpp  Stipple.h  Stipple.sln  Structs.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cimg_test.vcxproj  cimg_test.vcxproj.filters  cmake_install.cmake  stipple.vcxproj  stipple.vcxproj.filters  testvor.vcxproj  testvor.vcxproj.filters
